# itml-parser

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  STATUS.md
.github/workflows/: ci.yml
benches/: parse.rs
docs/: CHECKLIST.md  instructions.md
examples/: address.invalid.itml  address.valid.itml  data_access.policy.itml  project.app.itml  send_email.intent.itml  user_profile.component.itml
grammar/: itml.ebnf  itml.pest
src/: ast.rs  formatter.rs  lib.rs  parser.rs  wasm.rs
src/linter/: mod.rs
tests/: conformance.rs  formatter_snapshots.rs  lints.rs
wasm/: README.md  package.json
wasm/examples/: node-smoke.mjs
